# synym

./: Cargo.toml  flake.nix  rust-toolchain.toml
.cargo/: config.toml
kernel/: Cargo.toml  build.rs  kernel.ld
kernel/src/: init.S  main.rs
kernel/src/sbi/: debug_console.rs  mod.rs
kernel/src/sync/: lazylock.rs  mod.rs  mutex.rs  spinlock.rs
