[package]
name = "kernel"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
enum-primitive-derive-nostd = "0.2.2"
num-traits = { version = "0.2.19", default-features = false }

[build-dependencies]
cc = "1.0"
