[package]
name = "kernel"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[[bin]]
name = "kernel"
test = false
bench = false

[dependencies]
num_enum = { version = "0.7.3", default-features = false, features = ["complex-expressions"] }
